fixed blurry fonts

--- a/public/assets/styl/base/typography.styl
+++ b/public/assets/styl/base/typography.styl
@@ -8,8 +8,8 @@ body
 	-moz-font-smoothing antialiased
 	-webkit-font-smoothing: antialiased
 	-moz-osx-font-smoothing grayscale
-	text-shadow 0 1px 0 rgba(0,0,0,0.01)
-	-webkit-text-stroke 1px transparent
+	filter blur(0)
+	-webkit-filter blur(0)
 
 input
 textarea
@@ -22,8 +22,8 @@ button
 	-moz-font-smoothing antialiased
 	-webkit-font-smoothing: antialiased
 	-moz-osx-font-smoothing grayscale
-	text-shadow 0 1px 0 rgba(0,0,0,0.01)
-	-webkit-text-stroke 1px transparent
+	filter blur(0)
+	-webkit-filter blur(0)
 
 h1
 h2
