--- a/public/assets/styl/components/add-to-playlist.styl
+++ b/public/assets/styl/components/add-to-playlist.styl
@@ -3,7 +3,9 @@
 	z-index 99999
 	padding 0
 	border-radius 1rem
-	transform translate3d(-50%, -50%, 0)
+	transform translate(-50%, -50%)
+	filter blur(0)
+	-webkit-filter blur(0)
 	transform-style preserve-3d
 	backface-visibility hidden
 	top 50%
