--- a/public/assets/styl/components/chat.styl
+++ b/public/assets/styl/components/chat.styl
@@ -2,6 +2,9 @@
 	display block
 	position relative
 	height 100%
+	transform translateZ(0)
+	filter blur(0)
+	-webkit-filter blur(0)
 
 	&.hide-images-in-text
 		.chat-messages
