--- a/public/assets/styl/components/preview-player.styl
+++ b/public/assets/styl/components/preview-player.styl
@@ -8,7 +8,9 @@
 	max-width 100%
 	padding 1.5rem 1.5rem 3rem 1.5rem
 	left 50%
-	transform translate3d(-50%, 0, 0)
+	transform translateX(-50%)
+	-webkit-filter blur(0)
+	filter blur(0)
 	transform-style preserve-3d
 	backface-visibility hidden
 
@@ -60,7 +62,11 @@
 				height 5rem
 				top 50%
 				left 50%
-				transform translate3d(-50%, -50%, 0)
+				transform translate(-50%, -50%)
+				-webkit-filter blur(0)
+				filter blur(0)
+				transform-style preserve-3d
+				backface-visibility hidden
 
 	.controlContainer
 		width 100%
@@ -168,7 +174,11 @@
 		display block
 		z-index 9
 		background $accent-color
-		transform translate3d(-50%, -50%, 0)
+		transform translate(-50%, -50%)
+		-webkit-filter blur(0)
+		filter blur(0)
+		transform-style preserve-3d
+		backface-visibility hidden
 		padding 1rem 2rem
 
 	.error
